feat: add release automation (#10)
* feat: add release automation

* feat: add version endpoint

* ci: verify injected build version
